--- a/vueapp1.client/package.json
+++ b/vueapp1.client/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
